--- a/package.json
+++ b/package.json
@@ -25,9 +25,12 @@
     "@babel/preset-env": "^7.12.7",
     "@babel/preset-react": "^7.12.7",
     "@babel/preset-typescript": "^7.12.7",
+    "@types/react": "^17.0.0",
+    "@types/react-dom": "^17.0.0",
     "babel-loader": "^8.2.2",
     "compression-webpack-plugin": "^7.0.0",
     "cross-env": "^7.0.3",
+    "fork-ts-checker-webpack-plugin": "^6.0.8",
     "html-webpack-plugin": "^5.0.0-alpha.15",
     "terser-webpack-plugin": "^5.0.3",
     "typescript": "^4.1.2",
@@ -38,8 +41,7 @@
   },
   "dependencies": {
     "@material-ui/core": "^4.11.2",
-    "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0",
+    "path-browserify": "^1.0.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
   }
