--- a/package.json
+++ b/package.json
@@ -19,28 +19,28 @@
   },
   "homepage": "https://github.com/KKarai/reactApp#readme",
   "devDependencies": {
-    "@babel/cli": "^7.12.8",
-    "@babel/core": "^7.12.9",
-    "@babel/plugin-proposal-class-properties": "^7.12.1",
-    "@babel/preset-env": "^7.12.7",
-    "@babel/preset-react": "^7.12.7",
-    "@babel/preset-typescript": "^7.12.7",
-    "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0",
+    "@babel/cli": "^7.13.10",
+    "@babel/core": "^7.13.10",
+    "@babel/plugin-proposal-class-properties": "^7.13.0",
+    "@babel/preset-env": "^7.13.10",
+    "@babel/preset-react": "^7.12.13",
+    "@babel/preset-typescript": "^7.13.0",
+    "@types/react": "^17.0.3",
+    "@types/react-dom": "^17.0.2",
     "babel-loader": "^8.2.2",
-    "compression-webpack-plugin": "^7.0.0",
+    "compression-webpack-plugin": "^7.1.2",
     "cross-env": "^7.0.3",
-    "fork-ts-checker-webpack-plugin": "^6.0.8",
-    "html-webpack-plugin": "^5.0.0-alpha.15",
-    "terser-webpack-plugin": "^5.0.3",
-    "typescript": "^4.1.2",
-    "webpack": "^5.10.0",
-    "webpack-bundle-analyzer": "^4.2.0",
-    "webpack-cli": "^4.2.0",
-    "webpack-dev-server": "^3.11.0"
+    "fork-ts-checker-webpack-plugin": "^6.2.0",
+    "html-webpack-plugin": "^5.3.1",
+    "terser-webpack-plugin": "^5.1.1",
+    "typescript": "^4.2.3",
+    "webpack": "^5.26.3",
+    "webpack-bundle-analyzer": "^4.4.0",
+    "webpack-cli": "^4.5.0",
+    "webpack-dev-server": "^3.11.2"
   },
   "dependencies": {
-    "@material-ui/core": "^4.11.2",
+    "@material-ui/core": "^4.11.3",
     "path-browserify": "^1.0.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
