--- a/package.json
+++ b/package.json
@@ -27,17 +27,29 @@
     "@babel/preset-typescript": "^7.13.0",
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.2",
+    "@typescript-eslint/eslint-plugin": "^4.18.0",
+    "@typescript-eslint/parser": "^4.18.0",
     "babel-loader": "^8.2.2",
     "compression-webpack-plugin": "^7.1.2",
     "cross-env": "^7.0.3",
+    "eslint": "^7.22.0",
+    "eslint-config-airbnb-typescript": "^12.3.1",
+    "eslint-config-prettier": "^8.1.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-react": "^7.22.0",
+    "eslint-plugin-react-hooks": "^4.2.0",
     "fork-ts-checker-webpack-plugin": "^6.2.0",
+    "formik": "^2.2.6",
     "html-webpack-plugin": "^5.3.1",
+    "prettier": "^2.2.1",
     "terser-webpack-plugin": "^5.1.1",
     "typescript": "^4.2.3",
     "webpack": "^5.26.3",
     "webpack-bundle-analyzer": "^4.4.0",
     "webpack-cli": "^4.5.0",
-    "webpack-dev-server": "^3.11.2"
+    "webpack-dev-server": "^3.11.2",
+    "yup": "^0.32.9"
   },
   "dependencies": {
     "@material-ui/core": "^4.11.3",
