--- a/.eslintrc
+++ b/.eslintrc
@@ -5,5 +5,10 @@
   "parserOptions": {
     "project": "./tsconfig.json"
   },
-  "extends": ["airbnb-typescript", "prettier"]
+  "extends": ["airbnb-typescript", "prettier"],
+  "rules": {
+    "import/prefer-default-export": "off",
+    "react/jsx-props-no-spreading": "off",
+    "react/prop-types": "off"
+  }
 }
