--- a/package.json
+++ b/package.json
@@ -40,7 +40,6 @@
     "eslint-plugin-react": "^7.22.0",
     "eslint-plugin-react-hooks": "^4.2.0",
     "fork-ts-checker-webpack-plugin": "^6.2.0",
-    "formik": "^2.2.6",
     "html-webpack-plugin": "^5.3.1",
     "prettier": "^2.2.1",
     "terser-webpack-plugin": "^5.1.1",
@@ -48,13 +47,14 @@
     "webpack": "^5.26.3",
     "webpack-bundle-analyzer": "^4.4.0",
     "webpack-cli": "^4.5.0",
-    "webpack-dev-server": "^3.11.2",
-    "yup": "^0.32.9"
+    "webpack-dev-server": "^3.11.2"
   },
   "dependencies": {
     "@material-ui/core": "^4.11.3",
+    "formik": "^2.2.6",
     "path-browserify": "^1.0.1",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "yup": "^0.32.9"
   }
 }
